# nag-bot

./: .gitignore  Cargo.toml  Makefile  README.md  Readme.md  config.json  example.config.py  horrible.rs  main.py
src/: main.rs
