[package]
name = "crystal-nag-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4.10", default-features = false, features = ["clock"] }
reqwest = { version = "0.11", features = ["json"] }